@@ -1,28 +1,0 @@
-noinst_PROGRAMS += \
-	Programs/ImageDiff
-
-Programs_ImageDiff_CPPFLAGS = $(global_cppflags)
-
-Programs_ImageDiff_SOURCES = \
-   Tools/DumpRenderTree/gtk/ImageDiff.cpp
-
-Programs_ImageDiff_CXXFLAGS = \
-   $(global_cxxflags) \
-   $(global_cppflags) \
-   $(Programs_ImageDiff_CFLAGS)
-
-Programs_ImageDiff_CFLAGS = \
-   -fno-strict-aliasing \
-   $(global_cflags) \
-   $(GLOBALDEPS_CFLAGS) \
-   $(GTK_CFLAGS)
-
-Programs_ImageDiff_LDADD = \
-   $(GTK_LIBS)
-
-Programs_ImageDiff_LDFLAGS = \
-   -no-fast-install \
-   -no-install
-
-CLEANFILES += \
-	Programs/ImageDiff
