@@ -1,3 +1,12 @@
+2012-12-31  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Move ImageDiff to the Tools directory root
+        https://bugs.webkit.org/show_bug.cgi?id=105421
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * GNUmakefile.am: Remove the old ImageDiff makefile include.
+
 2012-12-30  Kondapally Kalyan  <kalyan.kondapally@intel.com>
 
         [EFL] [WebGL] Rename EGLConfigHelper as EGLConfigSelector.
